@@ -11,12 +11,16 @@ main()
         "all-safe-chars",
         "ascii-uri-chars",
         "control-chars",
-        "non-ascii-uri-chars"
+        "non-ascii-uri-chars",
+        "null-value",
+        "null-key",
+        "empty-value",
+        "safe2"
     };
 
     globus_dsi_rest_key_array_t         test_cases_array =
     {
-        .count = 4,
+        .count = 8,
         .key_value = (globus_dsi_rest_key_value_t[]) {
             {
                 .key = "safekey",
@@ -34,13 +38,32 @@ main()
                 .key = "ünsåfé ké¥",
                 .value = "¨˜ßåƒ´√å¬¨´"
             },
+            {
+                .key = "NULL-Value",
+                .value = NULL
+            },
+            {
+                .key = NULL,
+                .value = "NULL-KEY"
+            },
+            {
+                .key = "Empty-Value",
+                .value = ""
+            },
+            {
+                .key = "safekey2",
+                .value = "safevalue2",
+            }
         }
     };
+    size_t                              num_test_cases = test_cases_array.count;
 
-    printf("1..%zu\n", test_cases_array.count+1);
+    printf("1..%zu\n", num_test_cases+1);
     globus_module_activate(GLOBUS_DSI_REST_MODULE);
 
-    for (test_cases_array.count = 0; test_cases_array.count <= 4; test_cases_array.count++)
+    for (test_cases_array.count = 0;
+         test_cases_array.count < num_test_cases+1;
+         test_cases_array.count++)
     {
         bool ok = true;
         bool key_ok = true;
@@ -50,6 +73,8 @@ main()
             "https://rest.example.org/resource",
             &test_cases_array,
             &encoded);
+
+        fprintf(stderr, "# encoded to %s\n", encoded);
 
         if (test_cases_array.count == 0)
         {
@@ -62,6 +87,7 @@ main()
         else
         {
             char *p = strchr(encoded, '?');
+
             if (p == NULL)
             {
                 ok = false;
@@ -77,16 +103,18 @@ main()
                     char *n = strchr(v, '&');
                     const char *origk = test_cases_array.key_value[i].key;
                     const char *origv = test_cases_array.key_value[i].value;
-                    size_t o, e;
+                    size_t o=0, e=0;
+
+                    if (origk == NULL || origv == NULL)
+                    {
+                        continue;
+                    }
 
                     *(v++) = 0;
                     if (n)
                     {
                         *(n++) = 0;
                     }
-
-                    o = 0;
-                    e = 0;
 
                     while (origk[o] != 0 && k[e] != 0)
                     {
@@ -194,7 +222,8 @@ main()
             }
         }
 
-        printf("%s - %s%s%s\n", ok ? "ok" : "not ok",
+        printf("%s %zu - %s%s%s\n", ok ? "ok" : "not ok",
+                test_cases_array.count+1,
                 names[test_cases_array.count],
                 key_ok ? "" : " key encoding error",
                 val_ok ? "" : " value encoding error");
