@@ -1,3 +1,9 @@
+globus-dsi-rest (0.23-1+gt6.@distro@) @distro@; urgency=low
+
+  * Allow NULL key or value in URI parameters
+
+ -- Globus Toolkit <support@globus.org>  Wed, 11 Jan 2017 15:31:33 -0500
+
 globus-dsi-rest (0.22-1+gt6.@distro@) @distro@; urgency=low
 
   * Ensure printable log level string is not null.
